--- a/index.html
+++ b/index.html
@@ -1,1 +1,384 @@
 
+-
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>emergency water shut off valve location georgetown in Georgetown | Murray Plumbing Technical Guide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Technical guide for identifying emergency water shut off valve locations in Georgetown, CA, covering access points, diagnostics, standards context, and risk factors.">
+  <meta name="geo.position" content="38.9118;-120.8320">
+  <meta name="geo.placename" content="Georgetown, California">
+  <meta name="geo.region" content="US-CA">
+  <style>
+    :root { color-scheme: light; }
+    body{
+      margin:0;
+      font-family: Arial, Helvetica, sans-serif;
+      line-height:1.55;
+      color:#111;
+      background:#fff;
+    }
+    header, main, footer{
+      max-width:800px;
+      margin:0 auto;
+      padding:20px;
+    }
+    header{
+      padding-top:28px;
+      padding-bottom:12px;
+      border-bottom:1px solid #ddd;
+    }
+    h1{
+      margin:0 0 6px 0;
+      font-size:1.7rem;
+      font-weight:700;
+    }
+    .byline{
+      margin:0;
+      color:#333;
+      font-size:0.98rem;
+    }
+    h2{
+      font-size:1.15rem;
+      margin:18px 0 8px 0;
+      padding-top:4px;
+    }
+    p{ margin:10px 0; }
+    dl{ margin:10px 0 0 0; }
+    dt{ font-weight:700; margin-top:10px; }
+    dd{ margin:4px 0 0 0; }
+    svg{
+      width:100%;
+      height:auto;
+      display:block;
+      margin:12px 0 6px 0;
+      border:1px solid #e2e2e2;
+      border-radius:8px;
+      background:#fff;
+    }
+    table{
+      width:100%;
+      border-collapse:collapse;
+      margin-top:10px;
+    }
+    caption{
+      text-align:left;
+      font-weight:700;
+      margin-bottom:8px;
+    }
+    th, td{
+      border:1px solid #d8d8d8;
+      padding:10px;
+      vertical-align:top;
+    }
+    th{
+      background:#f3f3f3;
+      text-align:left;
+    }
+    footer{
+      border-top:1px solid #ddd;
+      padding-top:14px;
+      color:#333;
+      font-size:0.95rem;
+    }
+    a{ color:#0645ad; }
+    a:visited{ color:#0b3d91; }
+  </style>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Plumber",
+        "@id": "https://murrayplumbing.net/#murray-plumbing-georgetown-emergency-water-shut-off-valve-location-georgetown",
+        "inLanguage": "en-US",
+        "name": "Murray Plumbing",
+        "description": "Technical guide for identifying emergency water shut off valve locations in Georgetown, CA, covering access points, diagnostics, standards context, and risk factors.",
+        "areaServed": "Georgetown, California",
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 38.9118,
+          "longitude": -120.8320
+        },
+        "serviceArea": {
+          "@type": "GeoCircle",
+          "geoMidpoint": {
+            "@type": "GeoCoordinates",
+            "latitude": 38.9118,
+            "longitude": -120.8320
+          },
+          "geoRadius": 11500
+        },
+        "knowsAbout": [
+          "residential water service entry tracing",
+          "shutoff valve accessibility and operability checks",
+          "meter-side versus interior isolation points",
+          "leak containment planning and documentation",
+          "freeze-related emergency isolation procedures"
+        ],
+        "hasOfferCatalog": {
+          "@type": "OfferCatalog",
+          "name": "Plumbing Technical Services Catalog",
+          "itemListElement": [
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "emergency water shut off valve location georgetown"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "shutoff valve inspection and operability testing"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "accessibility improvements for critical isolation points"
+              }
+            }
+          ]
+        },
+        "sameAs": [
+          "https://sites.google.com/view/plumbergeorgeown/emergency-water-shut-off-valve-location-georgetown",
+          "https://www.murrayplumbing.net/emergency-water-shut-off-valve-georgetown-ca-murray-plumbing/"
+        ],
+        "citation": "https://www.cityofranchocordova.org/government/public-works"
+      },
+      {
+        "@type": "FAQPage",
+        "inLanguage": "en-US",
+        "about": {
+          "@id": "https://murrayplumbing.net/#murray-plumbing-georgetown-emergency-water-shut-off-valve-location-georgetown"
+        },
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "Where is the emergency water shut off valve usually located in Georgetown?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Common placements include near the water service entry point, inside a garage or utility space, or in a crawl space where the main line transitions into interior piping."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What is the difference between the interior shutoff valve and the meter-side control point?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "The interior shutoff isolates water within the structure, while the meter-side control point isolates supply at the service connection; each supports different emergency response scenarios."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How can a shutoff valve be checked for reliable operation before an emergency?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "A basic check confirms the valve is accessible, turns smoothly, and fully stops flow when closed, with attention to corrosion, obstructions, and labeling for quick identification."
+            }
+          }
+        ]
+      },
+      {
+        "@type": "HowTo",
+        "inLanguage": "en-US",
+        "name": "How emergency water shut off valve location georgetown Works in Georgetown",
+        "about": {
+          "@id": "https://murrayplumbing.net/#murray-plumbing-georgetown-emergency-water-shut-off-valve-location-georgetown"
+        },
+        "step": [
+          {
+            "@type": "HowToStep",
+            "name": "Trace the incoming service line",
+            "text": "Identify the path from the meter or service entry toward the structure and locate the point where the line enters the building envelope."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Confirm the primary interior isolation point",
+            "text": "Locate the main interior shutoff near the entry point and verify it corresponds to the full-house cold-water feed rather than a branch line."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Verify accessibility and operability",
+            "text": "Check clearance around the valve, confirm it turns without binding, and ensure it can fully stop flow under controlled conditions."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Document locations for emergency use",
+            "text": "Record where the interior shutoff and meter-side control points are located and note any access constraints that affect response time."
+          }
+        ]
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <header>
+    <h1>emergency water shut off valve location georgetown in Georgetown</h1>
+    <p class="byline">Technical Overview for Georgetown Residents</p>
+  </header>
+
+  <main id="main">
+    <article>
+      <section aria-labelledby="intro">
+        <h2 id="intro">Introduction</h2>
+        <p>
+          Emergency shutoff valve location work focuses on identifying the primary control point used to stop incoming water flow to a structure. In infrastructure terms, the valve is the first-line isolation mechanism that reduces damage escalation during pipe failures, appliance line breaks, or sudden leak events by limiting continued supply pressure.
+        </p>
+        <p>
+          In Georgetown, mixed-era construction and variable property layouts can place shutoff valves in different building zones, including garages, utility spaces, crawl spaces, or near foundation entry points. Foothill weather and seasonal freeze exposure also increase the value of fast isolation, since leaks may appear during or after a cold event when materials expand and contract.
+        </p>
+      </section>
+
+      <section aria-labelledby="terms">
+        <h2 id="terms">Key Terminology</h2>
+        <dl>
+          <dt>Main shutoff valve</dt>
+          <dd>The primary valve intended to stop water to the entire structure at the point where the service transitions to interior piping.</dd>
+
+          <dt>Service entry point</dt>
+          <dd>The location where the water supply line penetrates the building envelope, often near a perimeter wall or foundation.</dd>
+
+          <dt>Meter-side control point</dt>
+          <dd>An isolation point at the service connection that controls supply before water enters the structure, typically used when interior access is limited.</dd>
+
+          <dt>Operability</dt>
+          <dd>The practical ability to turn a valve fully open and closed without binding, leakage, or obstruction.</dd>
+
+          <dt>Access clearance</dt>
+          <dd>The physical space required to reach and operate a valve quickly, including visibility and removal of stored items or barriers.</dd>
+        </dl>
+      </section>
+
+      <section aria-labelledby="process">
+        <h2 id="process">Process &amp; Diagnostics</h2>
+        <p>
+          Locating the emergency water shutoff begins by tracing the water supply path into the structure and identifying the valve intended to isolate the full-house feed. Diagnostics then confirm the valve’s function and whether the location supports rapid operation under pressure. The evaluation also distinguishes between interior isolation and meter-side control points, since each may be used depending on the type of incident and access conditions.
+        </p>
+
+        <svg viewBox="0 0 900 220" role="img" aria-labelledby="valveProcessTitle" xmlns="http://www.w3.org/2000/svg">
+          <title id="valveProcessTitle">Emergency Shutoff Valve Location and Verification Workflow</title>
+          <desc>Diagram showing four stages: trace the incoming service line, confirm the primary interior isolation point, verify accessibility and operability, and document locations for emergency use.</desc>
+
+          <rect x="20" y="45" width="200" height="110" rx="10" ry="10" fill="#f7f7f7" stroke="#cfcfcf"/>
+          <text x="120" y="78" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="14" fill="#111">1) Trace service line</text>
+          <text x="120" y="102" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#333">Meter to entry point</text>
+          <text x="120" y="124" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#333">Routing context</text>
+
+          <rect x="240" y="45" width="200" height="110" rx="10" ry="10" fill="#f7f7f7" stroke="#cfcfcf"/>
+          <text x="340" y="78" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="14" fill="#111">2) Confirm main valve</text>
+          <text x="340" y="102" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#333">Whole-house isolation</text>
+          <text x="340" y="124" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#333">Not a branch line</text>
+
+          <rect x="460" y="45" width="200" height="110" rx="10" ry="10" fill="#f7f7f7" stroke="#cfcfcf"/>
+          <text x="560" y="78" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="14" fill="#111">3) Verify operation</text>
+          <text x="560" y="102" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#333">Access &amp; clearance</text>
+          <text x="560" y="124" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#333">Full shutoff check</text>
+
+          <rect x="680" y="45" width="200" height="110" rx="10" ry="10" fill="#f7f7f7" stroke="#cfcfcf"/>
+          <text x="780" y="78" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="14" fill="#111">4) Document locations</text>
+          <text x="780" y="102" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#333">Interior + meter-side</text>
+          <text x="780" y="124" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#333">Emergency readiness</text>
+
+          <line x1="220" y1="100" x2="240" y2="100" stroke="#666" stroke-width="2"/>
+          <polygon points="240,100 232,95 232,105" fill="#666"/>
+
+          <line x1="440" y1="100" x2="460" y2="100" stroke="#666" stroke-width="2"/>
+          <polygon points="460,100 452,95 452,105" fill="#666"/>
+
+          <line x1="660" y1="100" x2="680" y2="100" stroke="#666" stroke-width="2"/>
+          <polygon points="680,100 672,95 672,105" fill="#666"/>
+        </svg>
+
+        <p>
+          In practice, the outcome of the workflow is a verified isolation point that can be reached quickly, turned reliably, and understood by occupants even under time pressure. When labeling or access is unclear, documentation improves response speed and reduces confusion during an active leak.
+        </p>
+      </section>
+
+      <section aria-labelledby="standards">
+        <h2 id="standards">Technical Standards &amp; Local Context</h2>
+        <p>
+          Plumbing work related to valve replacement, relocation, or changes to service entry routing may intersect with permitting and inspection expectations depending on scope. A formal reference for public-works context and related guidance is available here:
+          <a href="https://www.cityofranchocordova.org/government/public-works">Rancho Cordova public works guidance for infrastructure context</a>.
+        </p>
+        <p>
+          Local conditions in Georgetown often include crawl space access constraints, retrofitted additions, and storage patterns that obstruct mechanical areas. Technical review commonly focuses on whether the shutoff is accessible, whether its function is clear, and whether the installation supports safe operation during an emergency isolation event.
+        </p>
+      </section>
+
+      <section aria-labelledby="factors">
+        <h2 id="factors">Cost &amp; Complexity Factors</h2>
+        <table>
+          <caption>Variables That Influence Scope and Complexity</caption>
+          <thead>
+            <tr>
+              <th scope="col">Factor</th>
+              <th scope="col">Why It Matters</th>
+              <th scope="col">Typical Considerations</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Valve accessibility</th>
+              <td>Restricted access increases time required for verification, maintenance, or corrective work.</td>
+              <td>Crawl spaces, finished walls, and crowded utility areas can slow identification and operation.</td>
+            </tr>
+            <tr>
+              <th scope="row">Installation age and condition</th>
+              <td>Older valves may bind, corrode, or fail to seal fully when closed.</td>
+              <td>Operability checks can reveal stiffness, leakage, or incomplete shutoff under normal pressure.</td>
+            </tr>
+            <tr>
+              <th scope="row">Service entry configuration</th>
+              <td>Routing determines where the main shutoff can be placed and how clearly it isolates the structure.</td>
+              <td>Split feeds, prior remodels, and additions may require careful tracing to avoid confusing a branch valve for the main.</td>
+            </tr>
+            <tr>
+              <th scope="row">Need for documentation and labeling</th>
+              <td>Clear identification reduces response time during emergencies.</td>
+              <td>Notes on interior and meter-side control points help occupants act quickly without trial-and-error.</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section aria-labelledby="faq">
+        <h2 id="faq">Common Questions (FAQ)</h2>
+
+        <section>
+          <h3>Where is the emergency water shut off valve usually located in Georgetown?</h3>
+          <p>
+            Common placements include near the water service entry point, inside a garage or utility space, or in a crawl space where the main line transitions into interior piping.
+          </p>
+        </section>
+
+        <section>
+          <h3>What is the difference between the interior shutoff valve and the meter-side control point?</h3>
+          <p>
+            The interior shutoff isolates water within the structure, while the meter-side control point isolates supply at the service connection; each supports different emergency response scenarios.
+          </p>
+        </section>
+
+        <section>
+          <h3>How can a shutoff valve be checked for reliable operation before an emergency?</h3>
+          <p>
+            A basic check confirms the valve is accessible, turns smoothly, and fully stops flow when closed, with attention to corrosion, obstructions, and labeling for quick identification.
+          </p>
+        </section>
+      </section>
+    </article>
+  </main>
+
+  <footer>
+    © 2026 Murray Plumbing · Serving Georgetown, California
+  </footer>
+</body>
+</html>
